# MyDoctro

DHT_EXAMPLE/: CMakeLists.txt
DHT_EXAMPLE/components/esp32-DHT11/: CMakeLists.txt  LICENSE  README.md  dht11.c  library.json
DHT_EXAMPLE/components/esp32-DHT11/examples/: simple_read.c
DHT_EXAMPLE/main/: CMakeLists.txt  DHT11_Code.c
Mobil_IoT_Uodated/: Kodeotakatik.txt  code.txt  fingerprintkey.txt  fitawf.txt
Mobil_IoT_Uodated/Firebase3.0/: Firebase3.0.ino
Mobil_IoT_Uodated/FirebaseGetData/: FirebaseGetData.ino
Mobil_IoT_Uodated/FirebaseSIM900/: FirebaseSIM900.ino
Mobil_IoT_Uodated/Firebase_2.0/: Firebase_2.0.ino
Mobil_IoT_Uodated/GPS/: GPS.ino
Mobil_IoT_Uodated/SIM00A_Text_Message/: SIM00A_Text_Message.ino
Mobil_IoT_Uodated/SIM808_SendMessage/: SIM808_SendMessage.ino
Mobil_IoT_Uodated/firebase_write_anonym/: firebase_write_anonym.ino
Project_SolarTracker/: AA6_Kotak Bawah ACG.gcode  AA6_Tutup Kotak ECG.gcode  Alghaz RE.docx  Data Analisis Solar Tracker.xlsx  Kotak Bawah ACG.stl  Tutup Kotak ECG.stl  ledmatrik.rar
Project_SolarTracker/Desain Alat/: Solar-Project.7z
Project_SolarTracker/Desain PCB/: Gerber_BoardOutline.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSolderMaskLayer.GBS  Gerber_Drill_NPTH.DRL  Gerber_Drill_PTH.DRL  Gerber_PCB_SOLAR-SYSTEM_2.7z  Gerber_TopLayer.GTL  Gerber_TopSilkLayer.GTO  Gerber_TopSolderMaskLayer.GTS
Project_SolarTracker/PSA_ALGO/: PSA_ALGO.ino
Project_SolarTracker/SolartrackerSystem/: SolartrackerSystem.ino
iot_blynk/: iot_blynk.ino
sketch_dec03a/: sketch_dec03a.ino
ultrasonic/: ultrasonic.ino
(+24 files in other folders)
